removed margin styling on callouts

--- a/report.html
+++ b/report.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Author1, Author2">
-<meta name="dcterms.date" content="2023-09-11">
+<meta name="dcterms.date" content="2023-09-12">
 <meta name="description" content="A template to help contributors style their articles and make use of different Quarto features.">
 
 <title>How to create an article for Real World Data Science</title>
@@ -133,7 +133,7 @@ div.csl-indent {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">September 11, 2023</p>
+        <p class="date">September 12, 2023</p>
       </div>
     </div>
     
@@ -192,7 +192,7 @@ div.csl-indent {
 <p>By adding your references as BibTeX to the <code>references.bib</code> file in this repository, you not only maintain your references in the right citation style, but you can also cite directly, as recommended by <span class="citation" data-cites="example-bibtexkey">Doe (<a href="#ref-example-bibtexkey" role="doc-biblioref">2020</a>)</span>, or indirectly <span class="citation" data-cites="example-bibtexkey">(see <a href="#ref-example-bibtexkey" role="doc-biblioref">Doe 2020</a>)</span>.</p>
 <p>By writing <code>---</code> you can add a horizontal line separator.</p>
 <hr>
-<p>If your article includes tips on special keyboard shortcuts, you can typeset them like this: <em>To print, press</em> <kbd>Shift-Ctrl-P</kbd>. <em>To open an existing new project, press</em> <kbd data-windows="Shift-Control-O" data-linux="Shift-Ctrl-L" data-mac="Shift-Command-O"></kbd>.</p>
+<p>If your article includes tips on special keyboard shortcuts, you can typeset them like this: <em>To print, press</em> <kbd>Shift-Ctrl-P</kbd>. <em>To open an existing new project, press</em> <kbd data-linux="Shift-Ctrl-L" data-windows="Shift-Control-O" data-mac="Shift-Command-O"></kbd>.</p>
 <p>You can write equations in-line like this <span class="math inline">\(y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + \epsilon \text{, }\)</span> or in a separate block like this: <span id="eq-first"><span class="math display">\[
 y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + \epsilon \text{. }
 \tag{1}\]</span></span></p>
@@ -361,11 +361,11 @@ y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + \epsilon \text{. }
 <dl class="code-annotation-container-grid">
 <dt data-target-cell="annotated-cell-5" data-target-annotation="1">1</dt>
 <dd>
-<span data-code-cell="annotated-cell-5" data-code-annotation="1" data-code-lines="3">Take <code>penguins</code>, and then,</span>
+<span data-code-lines="3" data-code-cell="annotated-cell-5" data-code-annotation="1">Take <code>penguins</code>, and then,</span>
 </dd>
 <dt data-target-cell="annotated-cell-5" data-target-annotation="2">2</dt>
 <dd>
-<span data-code-cell="annotated-cell-5" data-code-annotation="2" data-code-lines="4,5,6,7">add new columns for the bill ratio and bill area.</span>
+<span data-code-lines="4,5,6,7" data-code-cell="annotated-cell-5" data-code-annotation="2">add new columns for the bill ratio and bill area.</span>
 </dd>
 </dl>
 </div>
@@ -485,7 +485,7 @@ y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + \epsilon \text{. }
 <section id="some-icing-on-the-cake" class="level2">
 <h2 class="anchored" data-anchor-id="some-icing-on-the-cake">Some icing on the cake</h2>
 <p>You can add a warning to your writing like this:</p>
-<div class="callout callout-style-simple callout-warning" style="margin-top: 0.75rem;">
+<div class="callout callout-style-simple callout-warning">
 <div class="callout-body d-flex">
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
@@ -496,7 +496,7 @@ y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + \epsilon \text{. }
 </div>
 </div>
 <p>If your remark is too benign for a warning, but still valuable information for the reader, consider a note:</p>
-<div class="callout callout-style-simple callout-note" style="margin-top: 2.25rem;">
+<div class="callout callout-style-simple callout-note">
 <div class="callout-body d-flex">
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
