--- a/report.html
+++ b/report.html
@@ -361,11 +361,11 @@ y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + \epsilon \text{. }
 <dl class="code-annotation-container-grid">
 <dt data-target-cell="annotated-cell-5" data-target-annotation="1">1</dt>
 <dd>
-<span data-code-lines="3" data-code-cell="annotated-cell-5" data-code-annotation="1">Take <code>penguins</code>, and then,</span>
+<span data-code-annotation="1" data-code-lines="3" data-code-cell="annotated-cell-5">Take <code>penguins</code>, and then,</span>
 </dd>
 <dt data-target-cell="annotated-cell-5" data-target-annotation="2">2</dt>
 <dd>
-<span data-code-lines="4,5,6,7" data-code-cell="annotated-cell-5" data-code-annotation="2">add new columns for the bill ratio and bill area.</span>
+<span data-code-annotation="2" data-code-lines="4,5,6,7" data-code-cell="annotated-cell-5">add new columns for the bill ratio and bill area.</span>
 </dd>
 </dl>
 </div>
